features(rating): version mobile finish ; need to fix version desktop et responsive

--- a/my-react-app/src/styles/components/_slideshow.scss
+++ b/my-react-app/src/styles/components/_slideshow.scss
@@ -1,3 +1,6 @@
+@use '../abstracts/variables' as vars;
+
+
 // -------------- slideshow scss -------------
 
 .slideshow {
@@ -11,7 +14,7 @@
     &__window{
         overflow: hidden;
         width: 100%;
-        height: 450px;
+        // height: 450px;
         position: relative;
     }
 
@@ -19,50 +22,61 @@
       display: flex;
       transition: transform 0.5s ease-in-out;
       width: 100%;
-      height: 450px;
+      height: 15.375rem;
     }
 
     &__image{
       width: 100%;
-      height: 450px;
+      // height: 450px;
       flex: 0 0 100%;
       object-fit: cover;
       display: block;
     }
-  }
-    
-  .arrow {
+
+}
+
+  .slideshow__arrow {
     position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 40px;
-    height: 40px;
-    background-color: rgba(255, 255, 255, 0.7);
+    top: 47%;
+    z-index: 2;
     border: none;
-    border-radius: 50%;
     cursor: pointer;
-    font-size: 20px;
-    font-weight: bold;
     display: flex;
     align-items: center;
     justify-content: center;
-    transition: background-color 0.3s, transform 0.2s;
-    z-index: 2;
+
+    &:focus, &:active, &:hover {
+      outline:none;
+      filter: invert(1);
+    }
+
+    &.prev-arrow {
+      left: 3.7px; // Flèche gauche
+      transform: rotate(90deg);
+    }
+
+    &.next-arrow {
+      right: 3.7px; // Flèche droite
+      transform: rotate(-90deg);
+    }
+
   }
-  
-  .arrow:hover {
-    background-color: rgba(255, 255, 255, 0.9);
-    transform: translateY(-50%) scale(1.1);
+
+  .s__arrow {
+    background-image: url("../../../public/images/flèche-bas.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    transition: transform ease-in-out 0.1s !important;
+    width: 17px;
+    height: 20px;
+
+    &:hover {
+      transform: scale(1.1);
+    }
+
   }
-  
-  .prev-arrow {
-    left: 15px;
-  }
-  
-  .next-arrow {
-    right: 15px;
-  }
-  
+    
+    
   .slide-counter {
     position: absolute;
     bottom: 15px;
